Fix icons spacing.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -63,6 +63,12 @@ div#page-document {
       }
     }
 
+    div.above-results {
+      button.ui.button i {
+        margin: 0px;
+      }
+    }
+
     div.cards {
       margin-bottom: 0px;
 
